fix: Fixes height shift issue  with resizable textarea

--- a/app/javascript/dashboard/assets/scss/widgets/_reply-box.scss
+++ b/app/javascript/dashboard/assets/scss/widgets/_reply-box.scss
@@ -40,7 +40,7 @@
       margin: 0;
       max-height: $space-mega * 2.4;
       // Override min-height : 50px in foundation
-      min-height: 3rem;
+      min-height: 4rem;
       padding: var(--space-normal) 0 0;
       resize: none;
     }
